objects/Opportunity/fields/Close_date__c.field-meta.xml
<CustomField>
    <fullName>Close_date__c</fullName>
    <label>Close date</label>
    <type>DateTime</type>
</CustomField>