objects/Opportunity/fields/Closed_amount__c.field-meta.xml
<CustomField>
    <fullName>Closed_amount__c</fullName>
    <formula>IF(ISPICKVAL( Status__c, &quot;Won&quot;), Amount*1,(IF(ISPICKVAL( Status__c, &quot;Loss&quot;), Amount * 0, 0)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Closed amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>