objects/Opportunity/fields/Main_Competitors__c.field-meta.xml
<CustomField>
    <fullName>Main_Competitors__c</fullName>
    <label>Main Competitors</label>
    <length>200</length>
    <type>Text</type>
</CustomField>