objects/Opportunity/fields/Modified_at__c.field-meta.xml
<CustomField>
    <fullName>Modified_at__c</fullName>
    <formula>LastModifiedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Modified at</label>
    <type>DateTime</type>
</CustomField>