objects/Opportunity/fields/Primary_rep__c.field-meta.xml
<CustomField>
    <fullName>Primary_rep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary rep</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.UserRole.Name</field>
            <operation>contains</operation>
            <value>Sales Rep</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>