objects/Opportunity/fields/Status_reason__c.field-meta.xml
<CustomField>
    <fullName>Status_reason__c</fullName>
    <label>Status reason</label>
    <length>200</length>
    <type>Text</type>
</CustomField>